Regression: Mesh Deform modifier stops working on a linked collection upon undo #98626

Closed
opened 2022-06-06 13:10:42 +02:00 by Steffen Dünner · 13 comments

System Information
Operating system: Linux-5.15.0-33-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.43.04

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-06 07:42, hash: 7eb2018a0b
Worked: 3.2beta

Caused by b66368f3fd

Short description of error
I have a weird "modifier stops working" problem in a production scene with a not too complex rig (Armature, Driver, Mesh Deformer). It's kind of hard to describe but I built a very simple repro scene.
The "rig" itself is just two bones, one to transform an object and another bone parented to the first which controls the intensity of a "Simple Deform" modifier (via a Driver) that deforms the object.
The object (called "Cage" in the repro scene) is then used in a "Mesh Deform" modifier to deform a second object (a torus called "Torus" ;) ).
Everything works as expected until I go to a Graph Editor, change a keyframe on one of the bone's animation curve and then undo. Then all of a sudden the deformation of the Mesh Deform stops working. The torus is no longer squashed until I go to the Outliner > Blender File and then reload the linked library.

Exact steps for others to reproduce the error

  • Download and unpack the ZIP
    BUG_Rigrefresh_v01.zip
  • Open the file "BUG_ANI_Rigrefresh_v01.blend" in Blender
  • It's the rig I described above, linked into a fresh scene, overridden to be animated. The two things that are animated are the x-location of the first bone and the y-location of the second (which controls the deformation of the cage object).
  • Scrub through the timeline and see the cage and torus objects move and deform
  • Now go to frame 50 (or any other frame where the torus is deformed), change one of the two keyframes of the bone called "Bone" and then undo the change.
  • The torus is now no longer deformed
  • Scrub through the timeline and see the cage object still changing its shape but the torus is no longer "attached"

2022-06-06 13-07-35.mp4

**System Information** Operating system: Linux-5.15.0-33-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.43.04 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-06 07:42, hash: `7eb2018a0b` Worked: 3.2beta Caused by b66368f3fd **Short description of error** I have a weird "modifier stops working" problem in a production scene with a not too complex rig (Armature, Driver, Mesh Deformer). It's kind of hard to describe but I built a very simple repro scene. The "rig" itself is just two bones, one to transform an object and another bone parented to the first which controls the intensity of a "Simple Deform" modifier (via a Driver) that deforms the object. The object (called "Cage" in the repro scene) is then used in a "Mesh Deform" modifier to deform a second object (a torus called "Torus" ;) ). Everything works as expected until I go to a Graph Editor, change a keyframe on one of the bone's animation curve and then undo. Then all of a sudden the deformation of the Mesh Deform stops working. The torus is no longer squashed until I go to the Outliner > Blender File and then reload the linked library. **Exact steps for others to reproduce the error** - Download and unpack the ZIP [BUG_Rigrefresh_v01.zip](https://archive.blender.org/developer/F13134869/BUG_Rigrefresh_v01.zip) - Open the file "BUG_ANI_Rigrefresh_v01.blend" in Blender - It's the rig I described above, linked into a fresh scene, overridden to be animated. The two things that are animated are the x-location of the first bone and the y-location of the second (which controls the deformation of the cage object). - Scrub through the timeline and see the cage and torus objects move and deform - Now go to frame 50 (or any other frame where the torus is deformed), change one of the two keyframes of the bone called "Bone" and then undo the change. - The torus is now no longer deformed - Scrub through the timeline and see the cage object still changing its shape but the torus is no longer "attached" [2022-06-06 13-07-35.mp4](https://archive.blender.org/developer/F13134911/2022-06-06_13-07-35.mp4)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

There is confirmation. The Mesh Deform modifier stops working correctly after the first undo in the project (you can immediately enter the object mode and click undo)
My suspicion is that the problem is who owns the modifier, the original project, or the link

There is confirmation. The Mesh Deform modifier stops working correctly after the first undo in the project (you can immediately enter the object mode and click undo) My suspicion is that the problem is who owns the modifier, the original project, or the link

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems this is a regression, will check

Seems this is a regression, will check
Member

Caused by b66368f3fd

Caused by b66368f3fd
Philipp Oeser changed title from Modifier stops working on a linked collection to Regression: Mesh Deform modifier stops working on a linked collection upon undo 2022-06-07 09:25:58 +02:00
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

@mont29: mind checking?

@mont29: mind checking?

This issue was referenced by ccf0d22e92

This issue was referenced by ccf0d22e92ccd3148326477a3e807261c3e9537c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-06-07 15:30:31 +02:00

Awesome! Thanks for the fix.

Awesome! Thanks for the fix.
Thomas Dinges added this to the 3.3 LTS milestone 2023-02-08 15:37:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98626
No description provided.