Fix T98626: Mesh Deform modifier stops working on a linked collection upon undo.

Regression from rBb66368f3fd9c, we still need to store all data on undo
writes, since overrides are not re-applied after undo/redo.